// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HOC withClassDefault Should have className when provided 1`] = `
<DocumentFragment>
  <span
    class="my-class-name"
  />
</DocumentFragment>
`;

exports[`HOC withClassDefault Should have defaultClassName when none provided 1`] = `
<DocumentFragment>
  <span
    class="default-class-name"
  />
</DocumentFragment>
`;
